--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://devnowgnas:wndlsrhd@osakak.vxpncyr.mongodb.net/osakak?retryWrites=true&w=majority
+      uri:
